# omega-trading-bot

./: .gitignore  DESIGN.md  Dockerfile  README.md  candle_transformer_colab.ipynb  config.yaml  docker-compose.yml  kaggle_train.py  pyproject.toml  requirements.txt  test_all.py  train_24h.py  train_candle_llm.py  train_full.py
.github/workflows/: deploy.yml  test.yml
configs/: default.yaml
data/btc_multi_tf/: adausdt_15m.npy  adausdt_1d.npy  adausdt_1h.npy  adausdt_1m.npy  adausdt_4h.npy  adausdt_5m.npy  avaxusdt_15m.npy  avaxusdt_1d.npy  avaxusdt_1h.npy  avaxusdt_1m.npy  avaxusdt_4h.npy  avaxusdt_5m.npy  bnbusdt_15m.npy  bnbusdt_1d.npy  bnbusdt_1h.npy  bnbusdt_1m.npy  bnbusdt_4h.npy  bnbusdt_5m.npy  btc_15m.npy  btc_1d.npy  btc_1h.npy  (+34 more)
tests/: conftest.py  test_adversarial.py  test_agents.py  test_alerts.py  test_async_engine.py  test_auth.py  test_backtest_analytics.py  test_backtest_comparison.py  test_backtesting.py  test_basis_trade.py  test_binance_connector.py  test_calendar_view.py  test_candlestick.py  test_circuit_breaker.py  test_config.py  test_continual.py  test_core.py  test_correlation.py  test_correlation_monitor.py  test_credentials.py  test_cross_asset.py  test_dashboard.py  test_data_feed.py  test_data_quality.py  test_drawdown.py  test_ema_scalp.py  test_execution_algorithms.py  test_factor_models.py  test_feature_importance.py  test_features.py  test_fitness.py  test_funding_arb.py  test_genome.py  test_graceful_shutdown.py  test_greeks.py  test_health.py  test_infrastructure.py  test_margin.py  test_metrics.py  test_microstructure.py  (+51 more)
(+263 files in other folders)
