[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omega-trading"
version = "0.1.0"
description = "Omega Trading Intelligence — Autonomous self-creating, self-improving trading consciousness"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
    # Exchange connectivity
    "ccxt>=4.2",
    "alpaca-py>=0.21",
    # Data & indicators
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b1",
    "scipy>=1.12",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
    # ML / Evolution
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "torch>=2.2",
    "pytorch-forecasting>=1.1",
    "hmmlearn>=0.3",
    # Genetic programming
    "deap>=1.4",
    # Optimization
    "optuna>=3.5",
    # Causal inference
    "dowhy>=0.11",
    "networkx>=3.2",
    # Monitoring
    "prometheus-client>=0.20",
    "httpx>=0.27",
    # Async
    "anyio>=4.2",
    "asyncio-mqtt>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]

[project.scripts]
omega = "tradingbot.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
